Upgrade to Java 11 and parent version 2.0, and removed deprecated methods